Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18249

Regression: 0.4.15-4871 breaks, BSOD Cygwin setup

    XMLWordPrintable

Details

    Description

      Environment: VirtualBox 6.0 on Linux

      It works fine on both XP and Server 2003.

      Suspected guilty commit: https://github.com/reactos/reactos/commit/4471ee4

      Description for 4871-4922:

      Attempting to install Cygwin results in a 0x1E bluescreen.
      Entered debugger on last-chance exception (Exception Code: 0xc0000005) (Page Fault)
      Memory at 0x0000001C could not be accessed

      It crashes just before postinstall scripts.

      (Cygwin setup's progress percentage is a bit confusing, post-install scripts start over from 0%)


       
      [FIXED] Description for 3659-4860 (QUOTA_UNDERFLOW):

      Fails on: reactos-bootcd-0.4.15-dev-3659-g0c07eac-x86-gcc-lin-dbg.iso to 4860-g85afdf

      Works on: reactos-bootcd-0.4.15-dev-3658-gee697cf-x86-gcc-lin-dbg.iso and earlier.

      Works AGAIN on: reactos-bootcd-0.4.15-dev-4861-g5da5e64-x86-gcc-lin-dbg.iso

      Attempting to install Cygwin results in QUOTA_UNDERFLOW bluescreen.

      Things happen quickly after "(/ntoskrnl/mm/balance.c:145) MM BALANCER: Removing access bit!" but look like normal debug messages from running Cygwin.

      It crashes during postinstall scripts

      Cygwin: (See attached zip-file in CORE-18247, using `drive=C`)

       

      Attachments

        1. 3658-works.log
          225 kB
        2. 3659.png
          3659.png
          41 kB
        3. 3659-A.log
          89 kB
        4. 4860-A.log
          97 kB
        5. 4861-works.log
          224 kB
        6. 4870-works.log
          207 kB
        7. 4871-B.log
          48 kB
        8. 4922.png
          4922.png
          43 kB
        9. 4922-B.log
          56 kB
        10. testing.txt
          2 kB

        Activity

          People

            Fraizeraust George Bișoc
            oskog97 Oskar Skog
            Votes:
            2 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: